# classMatrix

./: CMakeLists.txt  Doxyfile  main.cpp
docs/html/: annotated.html  class_matrix-members.html  class_matrix.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  mat_8h_source.html
docs/html/search/: all_1.js  all_2.js  functions_0.js  functions_1.js  functions_2.js  related_0.js  searchdata.js
docs/latex/: class_matrix.tex  files.tex  mat_8h_source.tex  refman.tex
include/: mat.h
src/: mat.cpp
tests/: mat-test.cpp
